--- a/education.html
+++ b/education.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stroke Education | CráneoClave</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Education | CráneoClave</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background: linear-gradient(to bottom right, #f8f9fa, #e6f0ff);
+      background: #f4faff;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    .card {
-      margin-bottom: 1rem;
+    .card:hover {
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      transform: scale(1.02);
+      transition: 0.3s ease;
     }
-    .edu-header {
+    .quiz-section {
       margin-top: 2rem;
-    }
-    .interactive-box {
-      background-color: #ffffff;
-      border-radius: 8px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    .quiz-question {
-      font-weight: bold;
     }
   </style>
 </head>
@@ -45,74 +37,68 @@
     </div>
   </nav>
 
-  <div class="container edu-header">
-    <h1 class="text-center">🧠 Recognize the Signs of Stroke</h1>
-    <p class="text-center">Time is brain — know what to look for and what to do</p>
+  <div class="container py-4">
+    <h2 class="text-center mb-4">🧠 Stroke Education</h2>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">FAST/BEFAST Symptoms</h5>
+            <p class="card-text">
+              <strong>F</strong>ace drooping<br/>
+              <strong>A</strong>rm weakness<br/>
+              <strong>S</strong>peech difficulty<br/>
+              <strong>T</strong>ime to call emergency services<br/><br/>
+              <strong>B</strong>alance problems<br/>
+              <strong>E</strong>yesight changes (blurred/double vision)
+            </p>
+          </div>
+        </div>
+      </div>
 
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">🔤 FAST Acronym</h5>
-        <p class="card-text">
-          <strong>F</strong>ace drooping<br>
-          <strong>A</strong>rm weakness<br>
-          <strong>S</strong>peech difficulty<br>
-          <strong>T</strong>ime to call emergency services
-        </p>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">🚫 What NOT to Do</h5>
+            <ul>
+              <li>❌ Don't let the patient walk</li>
+              <li>❌ Don’t delay calling for help</li>
+              <li>❌ Avoid giving food or drink</li>
+              <li>❌ Don’t try to drive without clearance</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">🧩 Additional Symptoms</h5>
-        <ul>
-          <li>Sudden confusion or trouble understanding</li>
-          <li>Sudden numbness or weakness in face, arm, or leg — especially on one side</li>
-          <li>Trouble seeing in one or both eyes</li>
-          <li>Severe headache with no known cause</li>
-          <li>Loss of balance or coordination</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="interactive-box">
-      <h5>🧠 Quick Quiz: Which is a stroke sign?</h5>
-      <p class="quiz-question">Which of the following is a typical sign of stroke?</p>
-      <button class="btn btn-outline-primary w-100 my-1" onclick="checkAnswer(false)">Fever over 101°F</button>
-      <button class="btn btn-outline-primary w-100 my-1" onclick="checkAnswer(true)">Sudden arm weakness</button>
-      <button class="btn btn-outline-primary w-100 my-1" onclick="checkAnswer(false)">Chronic back pain</button>
-      <p id="quiz-feedback" class="mt-2"></p>
-    </div>
-
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">🌎 Local Language Tools</h5>
-        <p class="card-text">
-          CráneoClave supports multiple languages (Español, Português, Quechua, Guaraní, English, and more) and uses picture icons for accessibility.
-        </p>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">📝 What to Do</h5>
-        <ol>
-          <li>Start the timer and note the time of symptom onset.</li>
-          <li>Use the checklist tool to confirm signs.</li>
-          <li>Never drive — arrange safe transport or notify a local clinic.</li>
-          <li>Prepare the patient’s ID, medical history, and symptoms log.</li>
-        </ol>
-      </div>
+    <div class="quiz-section">
+      <h4 class="mt-5">🎯 Quick Quiz: Know Your Stroke Signs</h4>
+      <p>Which of the following is a warning sign of a stroke?</p>
+      <select class="form-select mb-3" id="quizSelect">
+        <option selected disabled>Choose an answer</option>
+        <option>Sudden euphoria</option>
+        <option>Sudden arm weakness</option>
+        <option>Hiccups</option>
+        <option>Itchy eyes</option>
+      </select>
+      <button class="btn btn-primary" onclick="checkQuizAnswer()">Check Answer</button>
+      <p id="quizResult" class="mt-3 fw-bold"></p>
     </div>
   </div>
 
   <script>
-    function checkAnswer(isCorrect) {
-      const feedback = document.getElementById("quiz-feedback");
-      feedback.innerText = isCorrect ? "✅ Correct! Sudden arm weakness is a stroke sign." : "❌ Not quite. Try again.";
-      feedback.style.color = isCorrect ? "green" : "red";
+    function checkQuizAnswer() {
+      const select = document.getElementById("quizSelect");
+      const result = document.getElementById("quizResult");
+      if (select.value === "Sudden arm weakness") {
+        result.textContent = "✅ Correct! This is a key stroke warning sign.";
+        result.style.color = "green";
+      } else {
+        result.textContent = "❌ Not quite. Try reviewing the FAST signs again.";
+        result.style.color = "red";
+      }
     }
   </script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
