--- a/index.html
+++ b/index.html
@@ -8,15 +8,49 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
       background: linear-gradient(to bottom right, #e9f5ff, #fefefe);
+    }
+    .hero-section {
+      background: linear-gradient(to right, rgba(2, 168, 176, 0.9), rgba(2, 106, 115, 0.9)), url('https://upload.wikimedia.org/wikipedia/commons/e/e4/MRI_head_side_view.jpg') center/cover no-repeat;
+      color: white;
+      padding: 8rem 2rem;
+      text-align: center;
+    }
+    .hero-title {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+    .hero-subtitle {
+      font-size: 1.2rem;
+      max-width: 700px;
+      margin: 1rem auto 2rem;
+    }
+    .scroll-btn {
+      margin-top: 1.5rem;
+      font-size: 1.1rem;
     }
     .main-header {
       padding-top: 2rem;
     }
+    .footer {
+      margin-top: 4rem;
+      padding: 1rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+    }
   </style>
 </head>
-<body onload="initializeTimer()">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<body onload="initializeTimer(); playWelcomeAudio()">
+  <div class="hero-section">
+    <h1 class="hero-title" id="welcomeHeader">Welcome to CráneoClave</h1>
+    <p class="hero-subtitle" id="welcomeSubheader">Use this guided triage tool to recognize stroke signs and take quick action.</p>
+    <a href="#main" class="btn btn-light btn-lg scroll-btn">⬇️ Scroll to Start</a>
+  </div>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">🧠 CráneoClave</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -34,7 +68,7 @@
             <option value="pt">🇧🇷 Português</option>
             <option value="qu">🇧🇴 Quechua</option>
             <option value="gn">🇵🇾 Guaraní</option>
-            <option value="en">🇺🇸 English</option>
+            <option value="en" selected>🇺🇸 English</option>
             <option value="fr">🇫🇷 Français</option>
             <option value="de">🇩🇪 Deutsch</option>
             <option value="zh">🇨🇳 中文</option>
@@ -60,45 +94,19 @@
     </div>
   </nav>
 
-  <div class="container main-header text-center">
-    <h1 id="welcomeHeader">Welcome to CráneoClave</h1>
-    <p class="lead" id="welcomeSubheader">Use this guided triage tool to recognize stroke signs and take quick action.</p>
+  <div class="container main-header text-center" id="main">
     <p class="text-muted">Language selected: <span id="currentLanguage">English</span></p>
-
     <div class="my-4">
       <p class="fw-bold" id="startTimeDisplay">⏱️ Timer began when: </p>
       <label for="symptomStartTime" class="form-label">🕒 When did symptoms start?</label>
       <input type="datetime-local" class="form-control" id="symptomStartTime" />
     </div>
-
     <div class="my-4">
-      <a href="checklist.html" class="btn btn-primary">➡️ Start Symptom Checklist</a>
-    </div>
-
-    <div class="accordion" id="nextStepsAccordion">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-            🚨 Next Steps (Qué hacer ahora)
-          </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#nextStepsAccordion">
-          <div class="accordion-body text-start">
-            <ul>
-              <li>🚑 Arrange safe transport — use mototaxi or community vehicle</li>
-              <li>📞 Notify nearest health post with symptoms + timing</li>
-              <li>🆔 Prepare ID, medication list, history</li>
-              <li>👪 Assign someone to monitor the patient during transport</li>
-              <li>💬 Use language tools — icons or regional languages</li>
-              <li>📷 Optional: take photos/videos of symptoms</li>
-              <li>🔄 Watch for worsening symptoms or delays</li>
-              <li>🧠 Remember: The brain is swelling. Time is critical.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+      <a href="checklist.html" class="btn btn-primary btn-lg">➡️ Start Symptom Checklist</a>
     </div>
   </div>
+
+  <footer class="footer">CráneoClave &copy; 2025 – Empowering Stroke Triage Access</footer>
 
   <script>
     const translations = {
@@ -107,8 +115,7 @@
       qu: { welcome: "CráneoClave-man hamuqkuyki", subheader: "Kay ruwanawan stroke ñawinchaykita ruwachiy." },
       gn: { welcome: "Eguahẽ CráneoClave-pe", subheader: "Emplea ko tembiapo rehegua umi tasy ñemohendápe." },
       en: { welcome: "Welcome to CráneoClave", subheader: "Use this guided triage tool to recognize stroke signs and take quick action." },
-      fr: { welcome: "Bienvenue à CráneoClave", subheader: "Utilisez cet outil pour détecter les signes d’AVC rapidement." },
-      // add other translations as needed
+      fr: { welcome: "Bienvenue à CráneoClave", subheader: "Utilisez cet outil pour détecter les signes d’AVC rapidement." }
     };
 
     function setLanguage() {
@@ -116,7 +123,6 @@
       const selectedLang = langSelect.value;
       const selectedText = langSelect.options[langSelect.selectedIndex].text;
       document.getElementById("currentLanguage").textContent = selectedText;
-
       if (translations[selectedLang]) {
         document.getElementById("welcomeHeader").textContent = translations[selectedLang].welcome;
         document.getElementById("welcomeSubheader").textContent = translations[selectedLang].subheader;
@@ -130,12 +136,10 @@
       document.getElementById("startTimeDisplay").textContent = `⏱️ Timer began when: ${formatted}`;
     }
 
-    function logEvent(msg) {
-      const logs = JSON.parse(localStorage.getItem("cranioLogs")) || [];
-      const time = new Date().toLocaleString();
-      logs.push(`${time} – ${msg}`);
-      localStorage.setItem("cranioLogs", JSON.stringify(logs));
-      alert(`Logged: ${msg}`);
+    function playWelcomeAudio() {
+      const utterance = new SpeechSynthesisUtterance("Welcome to CráneoClave. Use this tool to recognize stroke signs and act quickly.");
+      utterance.lang = "en-US";
+      window.speechSynthesis.speak(utterance);
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
